bug fix; add support for dropout to hmm training

--- a/distillation/tutorial_distillation.ipynb
+++ b/distillation/tutorial_distillation.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "\n",
     "# create data path\n",
-    "os.system(f'mkdir -p ${DATA_PATH}')\n",
+    "os.system(f'mkdir -p {DATA_PATH}')\n",
     "\n",
     "\n",
     "# sample LVD_SIZE examples for initializing hmm parameters via latent variable distillation (LVD)\n",
@@ -60,7 +60,7 @@
     "    --input_file {INPUT_FILE} --chunk_size {LVD_SIZE} \\\n",
     "    --batch_size {BATCH_SIZE} --max_new_tokens {SEQUENCE_LEN} \\\n",
     "    --save_embeddings --output_file {DATA_PATH}/{DATASET}.lvd'.strip()\n",
-    "_ = os.system(cmd)\n",
+    "print(cmd)\n",
     "\n",
     "\n",
     "# sample TOTAL_CHUNKS chunks of training examples as the training set\n",
@@ -71,7 +71,7 @@
     "    --input_file {INPUT_FILE} --chunk_size {CHUNK_SIZE} --total_chunks {TOTAL_CHUNKS} \\\n",
     "    --batch_size {BATCH_SIZE} --max_new_tokens {SEQUENCE_LEN} \\\n",
     "    --output_file {DATA_PATH}/{DATASET}.train'.strip()\n",
-    "_ = os.system(cmd)\n",
+    "print(cmd)\n",
     "\n",
     "\n",
     "# sample DEV_SIZE examples as the dev set\n",
@@ -82,7 +82,7 @@
     "    --input_file {INPUT_FILE} --chunk_size {DEV_SIZE} \\\n",
     "    --batch_size {BATCH_SIZE} --max_new_tokens {SEQUENCE_LEN} \\\n",
     "    --output_file {DATA_PATH}/{DATASET}.dev'.strip()\n",
-    "_ = os.system(cmd)"
+    "print(cmd)"
    ]
   },
   {
@@ -103,9 +103,12 @@
     "\n",
     "# specify the HMM size\n",
     "HIDDEN_STATES = 4096\n",
+    "\n",
+    "# get vocab_size and eos_token_id; might vary for different models #\n",
     "__tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL_PATH)\n",
     "VOCAB_SIZE = __tokenizer.vocab_size\n",
     "EOS_TOKEN_ID = __tokenizer.eos_token_id\n",
+    "####################################################################\n",
     "\n",
     "HMM_MODEL_ID = f'hmm_{DATASET}_{HIDDEN_STATES}'\n",
     "HMM_MODEL_PATH = f'./workspace/models/{HMM_MODEL_ID}/'\n",
@@ -131,7 +134,7 @@
     "    --hidden_states {HIDDEN_STATES} --vocab_size {VOCAB_SIZE} --eos_token_id {EOS_TOKEN_ID} \\\n",
     "    --kmeans_iterations 100 --pseudocount 0.001 \\\n",
     "    --output_file {HMM_MODEL_PATH}/checkpoint-0'\n",
-    "_ = os.system(cmd)"
+    "print(cmd)"
    ]
   },
   {
@@ -169,7 +172,7 @@
     "    --model_path {HMM_MODEL_PATH} --checkpoint 0 --save_per_step {SAVE_PER_STEP} \\\n",
     "    --data_path {DATA_PATH} --dataset {DATASET} --total_chunks {TOTAL_CHUNKS} --batch_size {BATCH_SIZE} \\\n",
     "    --em_schedule {EM_SCHEDULE} --log_file {LOG_FILE}'.strip()\n",
-    "_ = os.system(cmd)"
+    "print(cmd)"
    ]
   }
  ],
