update distillation tutorial

--- a/distillation/tutorial_distillation.ipynb
+++ b/distillation/tutorial_distillation.ipynb
@@ -158,6 +158,7 @@
     "CUDA_CORES = '0,1,2,3,4,5'\n",
     "BATCH_SIZE = 256\n",
     "SAVE_PER_STEP = 10\n",
+    "DROPOUT = 0.001\n",
     "\n",
     "# EM training schedule:\n",
     "# 1. train for 10 EM steps, each step using 1 chunk of data\n",
@@ -171,7 +172,7 @@
     "cmd = f'CUDA_VISIBLE_DEVICES={CUDA_CORES} torchrun --standalone --nproc_per_node=gpu train_hmm.py \\\n",
     "    --model_path {HMM_MODEL_PATH} --checkpoint 0 --save_per_step {SAVE_PER_STEP} \\\n",
     "    --data_path {DATA_PATH} --dataset {DATASET} --total_chunks {TOTAL_CHUNKS} --batch_size {BATCH_SIZE} \\\n",
-    "    --em_schedule {EM_SCHEDULE} --log_file {LOG_FILE}'.strip()\n",
+    "    --em_schedule {EM_SCHEDULE} --dropout {DROPOUT} --log_file {LOG_FILE}'.strip()\n",
     "print(cmd)"
    ]
   }
