--- a/distillation/tutorial_distillation.ipynb
+++ b/distillation/tutorial_distillation.ipynb
@@ -16,35 +16,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_PATH = 'gpt2-large'\n",
+    "BASE_MODEL_PATH = 'ctrlg/gpt2-large_common-gen'\n",
     "\n",
     "# a list of prompts used to sample data from the given LLM, \n",
     "# please change according to the LLM & your use cases.\n",
+    "# ??\n",
     "INPUT_FILE = './workspace/inference_data/distillation_prompts.json' \n",
     "\n",
     "DATASET = 'gpt2-large'\n",
     "DATA_PATH = f'./workspace/hmm_data/{DATASET}'\n",
-    "LVD_SIZE = 100000\n",
-    "CHUNK_SIZE = 100000\n",
-    "DEV_SIZE = 20000\n",
-    "TOTAL_CHUNKS = 100\n",
+    "LVD_SIZE = 10000\n",
+    "CHUNK_SIZE = 10000\n",
+    "DEV_SIZE = 2000\n",
+    "TOTAL_CHUNKS = 20\n",
     "SEQUENCE_LEN = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu     sample_data.py     --model_name_or_path ctrlg/gpt2-large_common-gen     --tokenizer_name_or_path ctrlg/gpt2-large_common-gen     --input_file ./workspace/inference_data/distillation_prompts.json --chunk_size 10000     --batch_size 512 --max_new_tokens 32     --save_embeddings --output_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd\n",
+      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu     sample_data.py     --model_name_or_path ctrlg/gpt2-large_common-gen     --tokenizer_name_or_path ctrlg/gpt2-large_common-gen     --input_file ./workspace/inference_data/distillation_prompts.json --chunk_size 10000 --total_chunks 20     --batch_size 512 --max_new_tokens 32     --output_file ./workspace/hmm_data/gpt2-large/gpt2-large.train\n",
+      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu     sample_data.py     --model_name_or_path ctrlg/gpt2-large_common-gen     --tokenizer_name_or_path ctrlg/gpt2-large_common-gen     --input_file ./workspace/inference_data/distillation_prompts.json --chunk_size 2000     --batch_size 512 --max_new_tokens 32     --output_file ./workspace/hmm_data/gpt2-large/gpt2-large.dev\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "\n",
-    "CUDA_CORES = '0,1,2,3,4,5'\n",
+    "# CUDA_CORES = '0,1,2,3,4,5'\n",
+    "CUDA_CORES = '0,1'\n",
     "BATCH_SIZE = 512\n",
     "\n",
     "\n",
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +115,7 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "# specify the HMM size\n",
-    "HIDDEN_STATES = 4096\n",
+    "HIDDEN_STATES = 4096 * 2\n",
     "\n",
     "# get vocab_size and eos_token_id; might vary for different models #\n",
     "__tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL_PATH)\n",
@@ -118,13 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES=0,1 python lvd_hmm.py     --sequences_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd --embeddings_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd.embeddings     --hidden_states 8192 --vocab_size 50257 --eos_token_id 50256     --kmeans_iterations 100 --pseudocount 0.001     --output_file ./workspace/models/hmm_gpt2-large_8192//checkpoint-0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
-    "CUDA_CORES = '0,1,2,3,4,5'\n",
+    "CUDA_CORES = '0,1'\n",
     "SEQUENCES_FILE = f'{DATA_PATH}/{DATASET}.lvd'\n",
     "EMEBEDDINGS_FILE = f'{DATA_PATH}/{DATASET}.lvd.embeddings'\n",
     "\n",
@@ -146,16 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu train_hmm.py     --model_path ./workspace/models/hmm_gpt2-large_8192/ --checkpoint 0 --save_per_step 10     --data_path ./workspace/hmm_data/gpt2-large --dataset gpt2-large --total_chunks 20 --batch_size 256     --em_schedule \"100,1\" --dropout 0.01 --log_file ./workspace/logs/hmm_gpt2-large_8192_log.txt\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "os.system('mkdir -p ./workspace/logs')\n",
     "LOG_FILE=f'./workspace/logs/{HMM_MODEL_ID}_log.txt'\n",
     "\n",
-    "CUDA_CORES = '0,1,2,3,4,5'\n",
+    "CUDA_CORES = '0,1'\n",
     "BATCH_SIZE = 256\n",
     "SAVE_PER_STEP = 10\n",
     "DROPOUT = 0.01\n",
@@ -167,7 +196,9 @@
     "# 4. train for 4 EM steps, each step using 10 chunks of data\n",
     "# 5. train for 4 EM steps, each step using 20 chunks of data\n",
     "# 6. train for 1 EM steps, each step using 40 chunks of data\n",
-    "EM_SCHEDULE = \"\\\"10,1;5,2;4,5;4,10;4,20;1,40\\\"\"\n",
+    "# EM_SCHEDULE = \"\\\"10,1;5,2;4,5;4,10;4,20;1,40\\\"\"\n",
+    "# EM_SCHEDULE = \"\\\"20,1;10,2;4,5;2,10;2,20\\\"\"\n",
+    "EM_SCHEDULE = \"\\\"100,1\\\"\"\n",
     "\n",
     "cmd = f'CUDA_VISIBLE_DEVICES={CUDA_CORES} torchrun --standalone --nproc_per_node=gpu train_hmm.py \\\n",
     "    --model_path {HMM_MODEL_PATH} --checkpoint 0 --save_per_step {SAVE_PER_STEP} \\\n",
@@ -193,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
