--- a/tutorial_ctrlg.ipynb
+++ b/tutorial_ctrlg.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Ctrl-G Tutorial"
    ]
@@ -23,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -34,8 +38,17 @@
     "\n",
     "import torch\n",
     "import ctrlg\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer, LogitsProcessorList\n",
-    "\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, LogitsProcessorList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# load the pretrained base_model and hmm_model; see README.md for a complete list of \n",
     "# released checkpoints. note that the hmm_model and base_model must share the same \n",
     "# vocabulary of tokens: i.e., one cannot apply hmm_gpt2-large_common-gen_4096 to \n",
@@ -60,8 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "vocab_size = hmm_model.vocab_size\n",
@@ -136,9 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits_processor\n",
+      "generating\n"
+     ]
+    }
+   ],
    "source": [
     "# initialze the constraints logits processor\n",
     "# Note: this part pre-computes & cache certain conditional probability tables;\n",
@@ -148,7 +181,7 @@
     "    hmm_model, dfa_model,\n",
     "    min_new_tokens, max_new_tokens,\n",
     "    prompt_ids, prefix_ids=prefix_ids, suffix_ids=suffix_ids)\n",
-    "\n",
+    "print(\"logits_processor\")\n",
     "\n",
     "# set beam_size for beam search; usually the larger the beam_size the\n",
     "# higher the generation quality\n",
@@ -161,6 +194,7 @@
     "\n",
     "# generate with beam search\n",
     "input_ids = torch.tensor([prompt_ids], device=device)\n",
+    "print(\"generating\")\n",
     "outputs = base_model.generate(\n",
     "        input_ids=input_ids, do_sample=False, length_penalty=0.2,\n",
     "        num_beams=beam_size, num_return_sequences=beam_size,\n",
@@ -179,9 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "We strongly recommend passing in an `attention_mask` since your input_ids may be padded. See https://huggingface.co/docs/transformers/troubleshooting#incorrect-output-when-padding-tokens-arent-masked.\n",
+      "You may ignore this warning if your `pad_token_id` (50256) is identical to the `bos_token_id` (50256), `eos_token_id` (50256), or the `sep_token_id` (None), and your input is not padded.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0. \u001b[1m A young boy is riding a bike in a park.\u001b[0m\n",
+      "1. \u001b[1m A young girl is riding a bike in a park.\u001b[0m\n",
+      "2. \u001b[1m A young boy is riding a bike in the park.\u001b[0m\n",
+      "3. \u001b[1m A man and woman riding a bike in a park.\u001b[0m\n",
+      "4. \u001b[1m A young girl is riding a bike in the park.\u001b[0m\n",
+      "5. \u001b[1m A young man is riding a bike in a park.\u001b[0m\n",
+      "6. \u001b[1m A young man is riding a bike in the park.\u001b[0m\n",
+      "7. \u001b[1m riding a bike in a park on a sunny day.\u001b[0m\n",
+      "8. \u001b[1m A man and woman riding a bike in the park.\u001b[0m\n",
+      "9. \u001b[1m A young boy is riding a bike on the beach.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# extract the generated ids; removing prompt ids; remove suffix ids that are (partially) generated\n",
     "generated_ids = ctrlg.extract_generated_ids(outputs.tolist(), prompt_ids, suffix_ids, eos_token_id)\n",
@@ -205,9 +266,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.  on a fine sunny\u001b[1m day a young girl is walking her dog\u001b[0m in the park.\n",
+      "1.  on a fine sunny\u001b[1m day a young boy and his dog are playing\u001b[0m in the park.\n",
+      "2.  on a fine sunny\u001b[1m day a young boy is playing with his dog\u001b[0m in the park.\n",
+      "3.  on a fine sunny\u001b[1m day a boy and his dog are playing\u001b[0m in the park.\n",
+      "4.  on a fine sunny\u001b[1m day a young boy and his dog are walking\u001b[0m in the park.\n",
+      "5.  on a fine sunny\u001b[1m day a young girl and her dog are playing\u001b[0m in the park.\n",
+      "6.  on a fine sunny\u001b[1m day a young girl and her dog are walking\u001b[0m in the park.\n",
+      "7.  on a fine sunny\u001b[1m day a young girl is playing with her dog\u001b[0m in the park.\n",
+      "8.  on a fine sunny\u001b[1m day a girl is walking her dog\u001b[0m in the park.\n",
+      "9.  on a fine sunny\u001b[1m day a young boy and his dog are relaxing\u001b[0m in the park.\n"
+     ]
+    }
+   ],
    "source": [
     "vocab_size = hmm_model.vocab_size\n",
     "eos_token_id = hmm_model.eos_token_id\n",
@@ -424,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
