--- a/distillation/tutorial_distillation.ipynb
+++ b/distillation/tutorial_distillation.ipynb
@@ -115,7 +115,7 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "# specify the HMM size\n",
-    "HIDDEN_STATES = 4096 * 2\n",
+    "HIDDEN_STATES = 4096\n",
     "\n",
     "# get vocab_size and eos_token_id; might vary for different models #\n",
     "__tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL_PATH)\n",
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES=0,1 python lvd_hmm.py     --sequences_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd --embeddings_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd.embeddings     --hidden_states 8192 --vocab_size 50257 --eos_token_id 50256     --kmeans_iterations 100 --pseudocount 0.001     --output_file ./workspace/models/hmm_gpt2-large_8192//checkpoint-0\n"
+      "CUDA_VISIBLE_DEVICES=0,1 python lvd_hmm.py     --sequences_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd --embeddings_file ./workspace/hmm_data/gpt2-large/gpt2-large.lvd.embeddings     --hidden_states 4096 --vocab_size 50257 --eos_token_id 50256     --kmeans_iterations 100 --pseudocount 0.001     --output_file ./workspace/models/hmm_gpt2-large_4096//checkpoint-0\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu train_hmm.py     --model_path ./workspace/models/hmm_gpt2-large_8192/ --checkpoint 0 --save_per_step 10     --data_path ./workspace/hmm_data/gpt2-large --dataset gpt2-large --total_chunks 20 --batch_size 256     --em_schedule \"100,1\" --dropout 0.01 --log_file ./workspace/logs/hmm_gpt2-large_8192_log.txt\n"
+      "CUDA_VISIBLE_DEVICES=0,1 torchrun --standalone --nproc_per_node=gpu train_hmm.py     --model_path ./workspace/models/hmm_gpt2-large_4096/ --checkpoint 0 --save_per_step 10     --data_path ./workspace/hmm_data/gpt2-large --dataset gpt2-large --total_chunks 20 --batch_size 256     --em_schedule \"100,1\" --dropout 0.01 --log_file ./workspace/logs/hmm_gpt2-large_4096_log.txt\n"
      ]
     }
    ],
